--- a/archives.html
+++ b/archives.html
@@ -18,10 +18,10 @@
             <meta property="og:description" content="Ícaro Medeiros"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
     <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
@@ -48,9 +48,6 @@
                         <li >
                             <a href="/category/misc.html">Misc</a>
                         </li>
-                        <li >
-                            <a href="/category/semantic-web.html">Semantic web</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
@@ -63,36 +60,40 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
+    <ol class="breadcrumb">
+        <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
+        <li class="active">Archives</li>
+    </ol>
 
     <section id="content">
         <h1>Archives for Ícaro Medeiros</h1>
 
         <dl>
-                <dt>Sun 03 October 2010</dt>
-                <dd><a href='/my-super-post.html'>I'm back</a></dd>
-                <dt>Wed 23 September 2009</dt>
+                <dt>Dom 10 Agosto 2014</dt>
+                <dd><a href='/im-back.html'>I'm back</a></dd>
+                <dt>Qua 23 Setembro 2009</dt>
                 <dd><a href='/master-thesis.html'>Master thesis</a></dd>
-                <dt>Thu 03 September 2009</dt>
+                <dt>Qui 03 Setembro 2009</dt>
                 <dd><a href='/microformatos.html'>Microformatos</a></dd>
-                <dt>Thu 20 August 2009</dt>
+                <dt>Qui 20 Agosto 2009</dt>
                 <dd><a href='/4-anos-de-debian-festival.html'>4 anos de Debian Festival</a></dd>
-                <dt>Sun 31 May 2009</dt>
+                <dt>Dom 31 Maio 2009</dt>
                 <dd><a href='/por-que-Icaro Medeiros.html'>Por que Kirux?</a></dd>
-                <dt>Tue 12 May 2009</dt>
+                <dt>Ter 12 Maio 2009</dt>
                 <dd><a href='/rss-e-twitter-no-mesmo-ciberespaco.html'>RSS e Twitter no mesmo (ciber)espaço</a></dd>
-                <dt>Wed 06 May 2009</dt>
+                <dt>Qua 06 Maio 2009</dt>
                 <dd><a href='/wolfram-alpha-voce-pergunta-a-web-responde.html'>Wolfram Alpha - Você pergunta, a Web responde!?</a></dd>
-                <dt>Tue 21 April 2009</dt>
+                <dt>Ter 21 Abril 2009</dt>
                 <dd><a href='/e-se-os-filosofos-fossem-programadores.html'>E se os filósofos fossem programadores?</a></dd>
-                <dt>Thu 04 December 2008</dt>
+                <dt>Qui 04 Dezembro 2008</dt>
                 <dd><a href='/sugestao-de-tags.html'>Sugestão de tags</a></dd>
-                <dt>Thu 13 November 2008</dt>
+                <dt>Qui 13 Novembro 2008</dt>
                 <dd><a href='/web-semantica-e-o-efeito-do-fax.html'>Web Semântica e o efeito do Fax</a></dd>
-                <dt>Wed 05 November 2008</dt>
+                <dt>Qua 05 Novembro 2008</dt>
                 <dd><a href='/o-jogo-dos-metadados.html'>O jogo dos (meta)dados</a></dd>
-                <dt>Fri 31 October 2008</dt>
+                <dt>Sex 31 Outubro 2008</dt>
                 <dd><a href='/aprendizagem-de-ontologias.html'>Aprendizagem de Ontologias</a></dd>
-                <dt>Thu 23 October 2008</dt>
+                <dt>Qui 23 Outubro 2008</dt>
                 <dd><a href='/a-fantastica-fabrica-de-conhecimento.html'>A fantástica fábrica de conhecimento</a></dd>
         </dl>
     </section>
@@ -104,8 +105,9 @@
         <ul class="list-group list-group-flush">
                 <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
                   <ul class="list-group" id="social">
-                    <li class="list-group-item"><a href="#"><i class="fa fa-you can add links in your config file-square fa-lg"></i> You can add links in your config file</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa fa-another social link-square fa-lg"></i> Another social link</a></li>
+                    <li class="list-group-item"><a href="http://twitter.com/icaromedeiros"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+                    <li class="list-group-item"><a href="http://www.linkedin.com/in/icaromedeiros"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+                    <li class="list-group-item"><a href="http://github.com/icaromedeiros"><i class="fa fa-github-square fa-lg"></i> github</a></li>
                   </ul>
                 </li>
 
@@ -116,6 +118,11 @@
                         <li class="list-group-item tag-4">
                             <a href="/tag/alagoas.html">
                                 alagoas
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/blogging.html">
+                                blogging
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -133,7 +140,7 @@
                                 folkosonomy
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/folksonomies.html">
                                 folksonomies
                             </a>
@@ -203,7 +210,7 @@
                                 ontology learning
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/owl.html">
                                 owl
                             </a>
@@ -223,7 +230,7 @@
                                 programming languages
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/rdf.html">
                                 rdf
                             </a>
@@ -315,6 +322,26 @@
                         </li>
                     </ul>
                 </li>    
+
+    <li class="list-group-item">
+        <h4>
+            <i class="fa fa-github fa-lg"></i>
+            <span class="icon-label">GitHub Repos</span>
+        </h4>
+        <div id="gh_repos" style="background-color: beige">
+            <p class="list-group-item">Status updating...</p>
+        </div>
+            <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
+    </li>
+
+
+    <li class="list-group-item"><h4><i class="fa fa-twitter fa-lg"></i><span class="icon-label">Latest Tweets</span></h4></li>
+    <div id="twitter_timeline">
+        <a class="twitter-timeline" data-chrome="noheader" href="https://twitter.com/icaromedeiros" data-widget-id="501159537634590722">Tweets by icaromedeiros</a>
+    </div>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
     <li class="list-group-item"><h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
       <ul class="list-group" id="links">
         <li class="list-group-item">
@@ -345,7 +372,7 @@
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2010 Ícaro Medeiros
+         <div class="col-xs-10">&copy; 2014 Ícaro Medeiros
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -361,5 +388,26 @@
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
 
+    <!-- GitHub JS -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            if (!window.jXHR) {
+                var jxhr = document.createElement('script');
+                jxhr.type = 'text/javascript';
+                jxhr.src = '/theme/js/jXHR.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(jxhr, s);
+            }
+
+            github.showRepos({
+                user: 'icaromedeiros',
+                count: 5,
+                skip_forks: false,
+                target: '#gh_repos'
+            });
+        });
+    </script>
+    <script src="/theme/js/github.js" type="text/javascript"></script>
+    <!-- End GitHub JS Code -->
 </body>
 </html>
