--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <meta property="og:description" content="Ícaro Medeiros"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
     <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
@@ -48,9 +48,6 @@
                         <li >
                             <a href="/category/misc.html">Misc</a>
                         </li>
-                        <li >
-                            <a href="/category/semantic-web.html">Semantic web</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
@@ -65,10 +62,9 @@
         <div class="col-sm-9">
 
             <article>
-                <h2><a href="/my-super-post.html">I'm back</a></h2>
-                <div class="summary"><p class="first last">Short version for index and feeds</p>
-
-                    <a class="btn btn-default btn-xs" href="/my-super-post.html">more ...</a>
+                <h2><a href="/im-back.html">I'm back</a></h2>
+                <div class="summary"><p>I'm back blogging about programming and data (Linked Data or not)</p>
+                    <a class="btn btn-default btn-xs" href="/im-back.html">more ...</a>
                 </div>
             </article>
             <hr/>
@@ -170,14 +166,10 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
             </article>
             <hr/>
 
-        <ul class="pagination">
-                <li class="prev disabled"><a href="#">&laquo;</a></li>
-                    <li class="active"><a
-                            href="/index.html">1</a></li>
-                    <li class=""><a
-                            href="/index2.html">2</a></li>
+        <ul class="pager">
+                <li class="previous disabled"><a href="#">&larr; Newer</a></li>
                 <li class="next"><a
-                        href="/index2.html">&raquo;</a></li>
+                        href="/index2.html">Older &rarr;</a></li>
         </ul>
         </div>
         <div class="col-sm-3 well well-sm" id="sidebar">
@@ -187,8 +179,9 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
         <ul class="list-group list-group-flush">
                 <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
                   <ul class="list-group" id="social">
-                    <li class="list-group-item"><a href="#"><i class="fa fa-you can add links in your config file-square fa-lg"></i> You can add links in your config file</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa fa-another social link-square fa-lg"></i> Another social link</a></li>
+                    <li class="list-group-item"><a href="http://twitter.com/icaromedeiros"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+                    <li class="list-group-item"><a href="http://www.linkedin.com/in/icaromedeiros"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+                    <li class="list-group-item"><a href="http://github.com/icaromedeiros"><i class="fa fa-github-square fa-lg"></i> github</a></li>
                   </ul>
                 </li>
 
@@ -199,6 +192,11 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
                         <li class="list-group-item tag-4">
                             <a href="/tag/alagoas.html">
                                 alagoas
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/blogging.html">
+                                blogging
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -216,7 +214,7 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
                                 folkosonomy
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/folksonomies.html">
                                 folksonomies
                             </a>
@@ -286,7 +284,7 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
                                 ontology learning
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/owl.html">
                                 owl
                             </a>
@@ -306,7 +304,7 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
                                 programming languages
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/rdf.html">
                                 rdf
                             </a>
@@ -398,6 +396,26 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
                         </li>
                     </ul>
                 </li>    
+
+    <li class="list-group-item">
+        <h4>
+            <i class="fa fa-github fa-lg"></i>
+            <span class="icon-label">GitHub Repos</span>
+        </h4>
+        <div id="gh_repos" style="background-color: beige">
+            <p class="list-group-item">Status updating...</p>
+        </div>
+            <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
+    </li>
+
+
+    <li class="list-group-item"><h4><i class="fa fa-twitter fa-lg"></i><span class="icon-label">Latest Tweets</span></h4></li>
+    <div id="twitter_timeline">
+        <a class="twitter-timeline" data-chrome="noheader" href="https://twitter.com/icaromedeiros" data-widget-id="501159537634590722">Tweets by icaromedeiros</a>
+    </div>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
     <li class="list-group-item"><h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
       <ul class="list-group" id="links">
         <li class="list-group-item">
@@ -428,7 +446,7 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2010 Ícaro Medeiros
+         <div class="col-xs-10">&copy; 2014 Ícaro Medeiros
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -444,5 +462,26 @@ adoção em larga escala de RDF e OWL, p. ex.</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
 
+    <!-- GitHub JS -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            if (!window.jXHR) {
+                var jxhr = document.createElement('script');
+                jxhr.type = 'text/javascript';
+                jxhr.src = '/theme/js/jXHR.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(jxhr, s);
+            }
+
+            github.showRepos({
+                user: 'icaromedeiros',
+                count: 5,
+                skip_forks: false,
+                target: '#gh_repos'
+            });
+        });
+    </script>
+    <script src="/theme/js/github.js" type="text/javascript"></script>
+    <!-- End GitHub JS Code -->
 </body>
 </html>
