--- a/web-semantica-e-o-efeito-do-fax.html
+++ b/web-semantica-e-o-efeito-do-fax.html
@@ -25,10 +25,10 @@
                 <meta property="article:author" content="Icaro Medeiros" />
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
     <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
@@ -55,9 +55,6 @@
                         <li class="active">
                             <a href="/category/misc.html">Misc</a>
                         </li>
-                        <li >
-                            <a href="/category/semantic-web.html">Semantic web</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
@@ -70,6 +67,11 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
+            <ol class="breadcrumb">
+                <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
+                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li class="active">Web Semântica e o efeito do Fax</li>
+            </ol>
 
     <section id="content">
         <article>
@@ -144,6 +146,15 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
 </body></html>
             </div>
             <!-- /.entry-content -->
+    <hr />
+    <!-- AddThis Button BEGIN -->
+    <div class="addthis_toolbox addthis_default_style">
+            <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+    </div>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53f14e6163baee9f"></script>
+    <!-- AddThis Button END -->
         </article>
     </section>
 
@@ -155,8 +166,9 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
         <ul class="list-group list-group-flush">
                 <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
                   <ul class="list-group" id="social">
-                    <li class="list-group-item"><a href="#"><i class="fa fa-you can add links in your config file-square fa-lg"></i> You can add links in your config file</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa fa-another social link-square fa-lg"></i> Another social link</a></li>
+                    <li class="list-group-item"><a href="http://twitter.com/icaromedeiros"><i class="fa fa-twitter-square fa-lg"></i> twitter</a></li>
+                    <li class="list-group-item"><a href="http://www.linkedin.com/in/icaromedeiros"><i class="fa fa-linkedin-square fa-lg"></i> linkedin</a></li>
+                    <li class="list-group-item"><a href="http://github.com/icaromedeiros"><i class="fa fa-github-square fa-lg"></i> github</a></li>
                   </ul>
                 </li>
 
@@ -167,6 +179,11 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                         <li class="list-group-item tag-4">
                             <a href="/tag/alagoas.html">
                                 alagoas
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/blogging.html">
+                                blogging
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -184,7 +201,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                                 folkosonomy
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/folksonomies.html">
                                 folksonomies
                             </a>
@@ -254,7 +271,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                                 ontology learning
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/owl.html">
                                 owl
                             </a>
@@ -274,7 +291,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                                 programming languages
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-4">
                             <a href="/tag/rdf.html">
                                 rdf
                             </a>
@@ -366,6 +383,26 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                         </li>
                     </ul>
                 </li>    
+
+    <li class="list-group-item">
+        <h4>
+            <i class="fa fa-github fa-lg"></i>
+            <span class="icon-label">GitHub Repos</span>
+        </h4>
+        <div id="gh_repos" style="background-color: beige">
+            <p class="list-group-item">Status updating...</p>
+        </div>
+            <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
+    </li>
+
+
+    <li class="list-group-item"><h4><i class="fa fa-twitter fa-lg"></i><span class="icon-label">Latest Tweets</span></h4></li>
+    <div id="twitter_timeline">
+        <a class="twitter-timeline" data-chrome="noheader" href="https://twitter.com/icaromedeiros" data-widget-id="501159537634590722">Tweets by icaromedeiros</a>
+    </div>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
     <li class="list-group-item"><h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
       <ul class="list-group" id="links">
         <li class="list-group-item">
@@ -396,7 +433,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2010 Ícaro Medeiros
+         <div class="col-xs-10">&copy; 2014 Ícaro Medeiros
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -412,5 +449,26 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
 
+    <!-- GitHub JS -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            if (!window.jXHR) {
+                var jxhr = document.createElement('script');
+                jxhr.type = 'text/javascript';
+                jxhr.src = '/theme/js/jXHR.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(jxhr, s);
+            }
+
+            github.showRepos({
+                user: 'icaromedeiros',
+                count: 5,
+                skip_forks: false,
+                target: '#gh_repos'
+            });
+        });
+    </script>
+    <script src="/theme/js/github.js" type="text/javascript"></script>
+    <!-- End GitHub JS Code -->
 </body>
 </html>
