--- a/microformatos.html
+++ b/microformatos.html
@@ -411,7 +411,7 @@ muito segregado e só tem uns bravos defensores, e não a W3C por trás.</p>
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
