--- a/sugestao-de-tags.html
+++ b/sugestao-de-tags.html
@@ -373,7 +373,7 @@ melhorar as fórmulas, etc. Enfim, é isso... It's a long way.</p>
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
