--- a/a-fantastica-fabrica-de-conhecimento.html
+++ b/a-fantastica-fabrica-de-conhecimento.html
@@ -380,7 +380,7 @@ Um pano pra manga que fica pra depois...</p>
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
