--- a/master-thesis.html
+++ b/master-thesis.html
@@ -366,7 +366,7 @@ uma análise do comportamento do usuário (p. ex. que tipo de tags o sistema nã
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
