--- a/o-jogo-dos-metadados.html
+++ b/o-jogo-dos-metadados.html
@@ -398,7 +398,7 @@ precisemos tanto da ajuda dos universitários, MÁ ÔI!</p>
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
