--- a/por-que-Icaro Medeiros.html
+++ b/por-que-Icaro Medeiros.html
@@ -377,7 +377,7 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
