--- a/web-semantica-e-o-efeito-do-fax.html
+++ b/web-semantica-e-o-efeito-do-fax.html
@@ -389,7 +389,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
             <i class="fa fa-github fa-lg"></i>
             <span class="icon-label">GitHub Repos</span>
         </h4>
-        <div id="gh_repos" style="background-color: beige">
+        <div id="gh_repos" style="background-color: white">
             <p class="list-group-item">Status updating...</p>
         </div>
             <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
