Travis build LOCAL pushed to Github Pages

--- a/e-se-os-filosofos-fossem-programadores.html
+++ b/e-se-os-filosofos-fossem-programadores.html
@@ -17,7 +17,7 @@
             <meta property="og:url" content="/e-se-os-filosofos-fossem-programadores.html"/>
             <meta property="og:description" content="Traduzido e adaptado de If philosophers were programmers em 2009, revisado em 2014, quando do lançamento da versão nova do blog. Num certo aspecto, o código reflete como o programador percebe o problema e sua solução, talvez simulando interações presentes no mundo real. Antes de programar, os desenvolvedores gastam algum ..."/>
             <meta property="article:published_time" content="2009-04-21" />
-                <meta property="article:section" content="misc" />
+                <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="computer science" />
                 <meta property="article:tag" content="philosophy" />
                 <meta property="article:tag" content="programming languages" />
@@ -50,10 +50,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -69,7 +72,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">E se os filósofos fossem programadores?</li>
             </ol>
 
@@ -289,17 +292,7 @@ ficaram de fora, até porque o post já tava gigante. Abraços.</p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -360,6 +353,11 @@ ficaram de fora, até porque o post já tava gigante. Abraços.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -410,8 +408,8 @@ ficaram de fora, até porque o post já tava gigante. Abraços.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -429,7 +427,7 @@ ficaram de fora, até porque o post já tava gigante. Abraços.</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
