--- a/authors.html
+++ b/authors.html
@@ -43,10 +43,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li >
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -105,17 +108,7 @@
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -176,6 +169,11 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -226,8 +224,8 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -245,7 +243,7 @@
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
