--- a/o-jogo-dos-metadados.html
+++ b/o-jogo-dos-metadados.html
@@ -17,10 +17,10 @@
             <meta property="og:url" content="/o-jogo-dos-metadados.html"/>
             <meta property="og:description" content="Houve uma discussão sobre a burocracia da Web Semântica num post anterior. Não precisa ser tão burocrático! Só assim a Web pode ser semântica numa escala tão grande como ela agora ou ela daqui a 1 ano, 5 anos. Mas para garantir semântica precisamos de algumas estruturas (e ontologia é ..."/>
             <meta property="article:published_time" content="2008-11-05" />
-                <meta property="article:section" content="misc" />
-                <meta property="article:tag" content="folkosonomy" />
+                <meta property="article:section" content="Blog" />
+                <meta property="article:tag" content="folksonomy" />
                 <meta property="article:tag" content="metadata" />
-                <meta property="article:tag" content="semantic wiki" />
+                <meta property="article:tag" content="semantic wikis" />
                 <meta property="article:tag" content="social tagging" />
                 <meta property="article:tag" content="wikis" />
                 <meta property="article:tag" content="tagging" />
@@ -52,10 +52,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -71,7 +74,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">O jogo dos (meta)dados</li>
             </ol>
 
@@ -98,11 +101,11 @@
 
 
     <p> <span class="label label-default">Tags</span>
-	<a href="/tag/folkosonomy.html">folkosonomy</a>
+	<a href="/tag/folksonomy.html">folksonomy</a>
         /
 	<a href="/tag/metadata.html">metadata</a>
         /
-	<a href="/tag/semantic-wiki.html">semantic wiki</a>
+	<a href="/tag/semantic-wikis.html">semantic wikis</a>
         /
 	<a href="/tag/social-tagging.html">social tagging</a>
         /
@@ -205,17 +208,7 @@ precisemos tanto da ajuda dos universitários, MÁ ÔI!</p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -276,6 +269,11 @@ precisemos tanto da ajuda dos universitários, MÁ ÔI!</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -326,8 +324,8 @@ precisemos tanto da ajuda dos universitários, MÁ ÔI!</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -345,7 +343,7 @@ precisemos tanto da ajuda dos universitários, MÁ ÔI!</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
