--- a/por-que-Icaro Medeiros.html
+++ b/por-que-Icaro Medeiros.html
@@ -17,7 +17,7 @@
             <meta property="og:url" content="/por-que-Icaro Medeiros.html"/>
             <meta property="og:description" content="Uma história sobre nerdice adolescente, apelidos de IRC e script kiddies Nunca criaram apelidos interessantes com o nome Ícaro. Minha irmã conseguiu a façanha de inventar um tal de &#34;Cáqui&#34; (nunca confundir com Caqui) quando tinha uns 2 anos, até hoje umas primas me chamam assim, e soa RIDÍCULO. Meu ..."/>
             <meta property="article:published_time" content="2009-05-31" />
-                <meta property="article:section" content="misc" />
+                <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="kirux" />
                 <meta property="article:tag" content="script kiddie" />
                 <meta property="article:author" content="Icaro Medeiros" />
@@ -48,10 +48,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -67,7 +70,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">Por que Kirux?</li>
             </ol>
 
@@ -184,17 +187,7 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -255,6 +248,11 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -305,8 +303,8 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -324,7 +322,7 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
