--- a/rss-e-twitter-no-mesmo-ciberespaco.html
+++ b/rss-e-twitter-no-mesmo-ciberespaco.html
@@ -17,7 +17,7 @@
             <meta property="og:url" content="/rss-e-twitter-no-mesmo-ciberespaco.html"/>
             <meta property="og:description" content="Eu tava pensando nisso depois de uma semana usando o Twitter, vendo a quantidade (e a velocidade!) de links sugeridos pra lá e pra cá: Será que o RSS vai morrer desse jeito? Semana passada, no Twitter do &#34;wanna-be-rich-with-semantic-web-boy&#34; Nova Spivack, vi que ele discordava desse artigo do TechCrunch, que ..."/>
             <meta property="article:published_time" content="2009-05-12" />
-                <meta property="article:section" content="misc" />
+                <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="rss" />
                 <meta property="article:tag" content="trends" />
                 <meta property="article:tag" content="twitter" />
@@ -50,10 +50,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -69,7 +72,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">RSS e Twitter no mesmo (ciber)espaço</li>
             </ol>
 
@@ -198,17 +201,7 @@ and often broken.". Agreed.</p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -269,6 +262,11 @@ and often broken.". Agreed.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -319,8 +317,8 @@ and often broken.". Agreed.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -338,7 +336,7 @@ and often broken.". Agreed.</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
