--- a/sugestao-de-tags.html
+++ b/sugestao-de-tags.html
@@ -17,7 +17,7 @@
             <meta property="og:url" content="/sugestao-de-tags.html"/>
             <meta property="og:description" content="Sugestão de tags é a tarefa de ajudar os usuários a etiquetar recursos (ex: páginas no del.icio.us) recomendando tags relevantes. A principal estratégia é usar tags já usadas para descrever o mesmo conteúdo ou recursos similares. Como esse é um dos tópicos que eu vou trabalhar em Portugal ..."/>
             <meta property="article:published_time" content="2008-12-04" />
-                <meta property="article:section" content="misc" />
+                <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="social tagging" />
                 <meta property="article:tag" content="tag suggestion" />
                 <meta property="article:tag" content="web" />
@@ -49,10 +49,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -68,7 +71,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">Sugestão de tags</li>
             </ol>
 
@@ -180,17 +183,7 @@ melhorar as fórmulas, etc. Enfim, é isso... It's a long way.</p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -251,6 +244,11 @@ melhorar as fórmulas, etc. Enfim, é isso... It's a long way.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -301,8 +299,8 @@ melhorar as fórmulas, etc. Enfim, é isso... It's a long way.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -320,7 +318,7 @@ melhorar as fórmulas, etc. Enfim, é isso... It's a long way.</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
