--- a/web-semantica-e-o-efeito-do-fax.html
+++ b/web-semantica-e-o-efeito-do-fax.html
@@ -17,7 +17,7 @@
             <meta property="og:url" content="/web-semantica-e-o-efeito-do-fax.html"/>
             <meta property="og:description" content="Lendo o livro do Peter Mika, Web Semântica e Redes Sociais, na parte sobre a adoção da Web semântica, se fala do efeito do Fax, que emperra a adoção em larga escala de RDF e OWL, p. ex. É mais ou menos assim: quando as primeiras máquinas de Fax entraram ..."/>
             <meta property="article:published_time" content="2008-11-13" />
-                <meta property="article:section" content="misc" />
+                <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="rdf" />
                 <meta property="article:tag" content="owl" />
                 <meta property="article:tag" content="semantic web" />
@@ -50,10 +50,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -69,7 +72,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">Web Semântica e o efeito do Fax</li>
             </ol>
 
@@ -196,17 +199,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -267,6 +260,11 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -317,8 +315,8 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -336,7 +334,7 @@ sim, JÁ COMEÇOU. Mas quem não largar na frente pode perder a maratona!</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
