--- a/wolfram-alpha-voce-pergunta-a-web-responde.html
+++ b/wolfram-alpha-voce-pergunta-a-web-responde.html
@@ -17,7 +17,7 @@
             <meta property="og:url" content="/wolfram-alpha-voce-pergunta-a-web-responde.html"/>
             <meta property="og:description" content="Depois dos fracassos de Cuil e Wikia, mais um Google Killer wannabe? Acho que dessa vez não. O hype sobre a ferramenta vem crescendo muito, até porque ela vem com o respaldo de um cientista conhecido, Stephen Wolfram, físico, matemático e empresário conhecido por ser autor da ferramenta Mathematica e ..."/>
             <meta property="article:published_time" content="2009-05-06" />
-                <meta property="article:section" content="misc" />
+                <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="web search" />
                 <meta property="article:tag" content="google" />
                 <meta property="article:tag" content="knowledge reasoning" />
@@ -52,10 +52,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                          <li><a href="/pages/about.html">
-                             Sobre mim (About)
+                             About
+                          </a></li>
+                         <li><a href="/pages/talks.html">
+                             Talks
                           </a></li>
                         <li class="active">
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="/category/blog.html">Blog</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -71,7 +74,7 @@
         <div class="col-sm-9">
             <ol class="breadcrumb">
                 <li><a href="" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/misc.html" title="misc">misc</a></li>
+                <li><a href="/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">Wolfram Alpha - Você pergunta, a Web responde!?</li>
             </ol>
 
@@ -268,17 +271,7 @@ Coming -- and It Could be as Important as Google</a></p>
                                 debian
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folkosonomy.html">
-                                folkosonomy
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/folksonomies.html">
-                                folksonomies
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/folksonomy.html">
                                 folksonomy
                             </a>
@@ -339,6 +332,11 @@ Coming -- and It Could be as Important as Google</a></p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="/tag/ontologies.html">
+                                ontologies
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="/tag/ontology-learning.html">
                                 ontology learning
                             </a>
@@ -389,8 +387,8 @@ Coming -- and It Could be as Important as Google</a></p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/semantic-wiki.html">
-                                semantic wiki
+                            <a href="/tag/semantic-wikis.html">
+                                semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -408,7 +406,7 @@ Coming -- and It Could be as Important as Google</a></p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
