Travis build LOCAL pushed to Github Pages

--- a/por-que-Icaro Medeiros.html
+++ b/por-que-Icaro Medeiros.html
@@ -18,7 +18,6 @@
             <meta property="og:description" content="Uma história sobre nerdice adolescente, apelidos de IRC e script kiddies Nunca criaram apelidos interessantes com o nome Ícaro. Minha irmã conseguiu a façanha de inventar um tal de &#34;Cáqui&#34; (nunca confundir com Caqui) quando tinha uns 2 anos, até hoje umas primas me chamam assim, e soa RIDÍCULO. Meu ..."/>
             <meta property="article:published_time" content="2009-05-31" />
                 <meta property="article:section" content="Blog" />
-                <meta property="article:tag" content="kirux" />
                 <meta property="article:tag" content="script kiddie" />
                 <meta property="article:author" content="Icaro Medeiros" />
 
@@ -97,19 +96,14 @@
 
 
     <p> <span class="label label-default">Tags</span>
-	<a href="/tag/kirux.html">kirux</a>
-        /
 	<a href="/tag/script-kiddie.html">script kiddie</a>
  </p>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <html><body><p><strong>Uma história sobre nerdice adolescente, apelidos de IRC e script
-kiddies</strong></p>
-<p>Nunca criaram apelidos interessantes com o nome Ícaro. Minha irmã
-conseguiu a façanha de inventar um tal de "Cáqui" (nunca confundir com
-Caqui) quando tinha uns 2 anos, até hoje umas primas me chamam assim, e
-soa RIDÍCULO.</p>
+                <html><body><p><strong>Uma história sobre nerdice adolescente, apelidos de IRC e script kiddies</strong></p>
+<p>Nunca criaram apelidos interessantes com o nome Ícaro.
+Minha irmã conseguiu a façanha de inventar um tal de "Cáqui" (nunca confundir com Caqui) quando tinha uns 2 anos, até hoje umas primas me chamam assim, e soa RIDÍCULO.</p>
 <p>Meu primeiro nick (apelido) na Internet (lê-se IRC) foi Apocalypse_now.
 Coisa de pivete! Depois disso veio a Apocalypse HP (jogos, mp3, links,
 downloads)... Isso em 98 era O ÁPICE. EU TINHA UMA WEB PAGE. Meus amigos
@@ -199,11 +193,6 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/kirux.html">
-                                kirux
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
                             <a href="/tag/knowledge-reasoning.html">
                                 knowledge reasoning
                             </a>
@@ -264,11 +253,6 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/programming-languages.html">
-                                programming languages
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
                             <a href="/tag/rdf.html">
                                 rdf
                             </a>
@@ -313,7 +297,7 @@ inimigos sofreram... Sim, eu tenho um passado script kiddie.</p>
                                 tag suggestion
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-1">
                             <a href="/tag/tagging.html">
                                 tagging
                             </a>
