Travis build LOCAL pushed to Github Pages

--- a/aprendizagem-de-ontologias.html
+++ b/aprendizagem-de-ontologias.html
@@ -139,8 +139,8 @@
 <li>As definições que estão na ontologia representam uma síntese da opinião consensual dos especialistas sobre aquele domínio. Os especialistas ou os usuários da aplicação usando a ontologia podem melhorar a ontologia depois, e esse refinamento ajuda os próprios métodos de aprendizagem. Cria-se então um ciclo.</li>
 </ol>
 <p>Esse processo é sumarizado na figura abaixo.</p>
-<div class="figure" style="width: 781px; height: auto; max-width: 100%;">
-<img alt="Aprendizagem de Ontologias == Reserve Engineering" class="align-center" src="images/reverse.png" style="width: 781px; height: auto; max-width: 100%;"/>
+<div class="align-center" style="width: 781px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;">
+<img alt="Aprendizagem de Ontologias == Reserve Engineering" class="align-center" src="images/reverse.png" style="width: 781px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;"/>
 <p class="caption">Aprendizagem de Ontologias == Reserve Engineering</p>
 </div>
 <p>Aprendizagem de ontologia pode ser visto como uma tarefa de áreas como Extração de Informação e Mineração de Texto.</p>
