--- a/e-se-os-filosofos-fossem-programadores.html
+++ b/e-se-os-filosofos-fossem-programadores.html
@@ -119,8 +119,8 @@
 <p>Sócrates foi um dos fundadores da filosofia mas não é aí que as semelhanças acabam.</p>
 <p>Ele inventou um método para ganhar qualquer debate, a dialética: Ele ficava fazendo perguntas até que seu adversário caísse em contradição.</p>
 <p>Se alguém dizia que "moralidade é importante", ele perguntava: "Como você define moralidade?".</p>
-<div class="figure" style="width: 440px; height: auto; max-width: 100%;">
-<img alt="Sócrates" class="align-center" src="images/socrates.jpg" style="width: 440px; height: auto; max-width: 100%;"/>
+<div class="align-center" style="width: 440px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;">
+<img alt="Sócrates" class="align-center" src="images/socrates.jpg" style="width: 440px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;"/>
 <p class="caption">Sócrates</p>
 </div>
 <p>De modo similar, tudo em Assembly requer uma questão, não há nada pré-assumido e tudo tem de ser sucinto para ter sentido.
@@ -129,8 +129,8 @@ Se você é um programador trabalhando com Sócrates e o envia algo como <tt cla
 <p>Aristóteles teve um grande impacto na filosofia Ocidental, fundando muitas áreas científicas, como Física, Biologia e até a Lógica.</p>
 <p>Ele examinou as entidades e a essência real de tudo, em constraste as abstrações de Platão.
 Sua filosofia é orientada a uma "média dourada" como a chave para contra-balançar tudo e alcançar moralidade ou entender a vida.</p>
-<div class="figure" style="width: 300px; height: auto; max-width: 100%;">
-<img alt="Hello Word!" class="align-center" src="images/c_baby.jpg" style="width: 300px; height: auto; max-width: 100%;"/>
+<div class="align-center" style="width: 300px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;">
+<img alt="Hello Word!" class="align-center" src="images/c_baby.jpg" style="width: 300px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;"/>
 <p class="caption">Hello Word!</p>
 </div>
 <p>A linguagem de programação C foi muito influente no projeto das filosofias das linguagens, principalmente no nível sintático.</p>
@@ -148,8 +148,8 @@ Em programação, diremos que é uma instância da classe Xícara.</p>
 <p>Os estóicos negam qualquer coisa imaterial e tenta explicar o mundo por uma lógica.
 Eles rejeitam tudo que é ideal e se concentram na moralidade, apreciando a liberdade da introspecção para alcançar a verdadeira sabedoria.</p>
 <p>As pessoas devem ser irmãs, sem distinções e devem contribuir para uma sociedade de amizade, paz e amor.</p>
-<div class="figure" style="width: 347px; height: auto; max-width: 100%;">
-<img alt="Mensagem hippie usando expressões regulares!" class="align-center" src="images/perl2.jpg" style="width: 347px; height: auto; max-width: 100%;"/>
+<div class="align-center" style="width: 347px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;">
+<img alt="Mensagem hippie usando expressões regulares!" class="align-center" src="images/perl2.jpg" style="width: 347px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;"/>
 <p class="caption">Mensagem hippie usando expressões regulares!</p>
 </div>
 <p>O Perl é uma linguagem livre de forma.
@@ -163,8 +163,8 @@ linguagens de scripting, tipagem dinâmica e programação funcional.</p>
 Ele acreditava que a dúvida é a prova da existência, e o cogito é a causa da dúvida, o que nos leva a famosa frase "cogito ergo sum" (I think therefore I am).</p>
 <p>O cogito nada mais é do que outro processo que fazemos, mas na verdade comanda tudo que nós fazemos.
 Então, o que queremos, imaginamos ou sentimos é acessível apenas através dele.O pensar seria um método da classe abstrata <tt class="docutils literal">Thinker</tt>, talvez?</p>
-<div class="figure" style="width: 431px; height: auto; max-width: 100%;">
-<img alt="Descartes extends Thinker" class="align-center" src="images/descartes.jpg" style="width: 431px; height: auto; max-width: 100%;"/>
+<div class="align-center" style="width: 431px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;">
+<img alt="Descartes extends Thinker" class="align-center" src="images/descartes.jpg" style="width: 431px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;"/>
 <p class="caption">Descartes extends Thinker</p>
 </div>
 <p>Descartes também é responsável por outra revolução no campo da filosofia.
