--- a/master-thesis.html
+++ b/master-thesis.html
@@ -120,8 +120,8 @@
 <p>Construí um sistema que extraiu dados do Delicious e depois usei técnicas de Information Retrieval, Machine Learning e outras coisas para sugerir automaticamente tags para uma página Web.</p>
 <p>Usei como base da sugestão de tags pra páginas Web o conteúdo textual, páginas vizinhas (inbound pages) e informação do WordNet e ontologias.</p>
 <p>No final faço uma comparação entre as tags que sugeri e as tags do Delicious pra dar uma medida quantitativa do quanto o sistema é bom e uma análise do comportamento do usuário (p. ex. que tipo de tags o sistema não consegue sugerir: "semweb" e "webdev").</p>
-<div class="figure" style="width: 594px; height: auto; max-width: 100%;">
-<img alt="Nuvem de tags" class="align-center" src="images/tagcloud1.gif" style="width: 594px; height: auto; max-width: 100%;"/>
+<div class="align-center" style="width: 594px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;">
+<img alt="Nuvem de tags" class="align-center" src="images/tagcloud1.gif" style="width: 594px; height: auto;background-color: #E0E0E0; border-radius: 5%; padding: 10px; max-width: 100%;"/>
 <p class="caption">Nuvem de tags</p>
 </div>
 <p>O resultado disso pode ser visto nos slides abaixo:</p>
