Travis build LOCAL pushed to Github Pages

--- a/aprendizagem-de-ontologias.html
+++ b/aprendizagem-de-ontologias.html
@@ -173,7 +173,7 @@ Descoberta | População | Enriquecimento) de ontologias, com algumas diferença
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
-        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    <img width="100%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
     <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
