--- a/4-anos-de-debian-festival.html
+++ b/4-anos-de-debian-festival.html
@@ -165,7 +165,7 @@ E mesmo com o "bolo" do pessoal estudante e profissional de computação às vez
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
-        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    <img width="100%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
     <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
