--- a/a-fantastica-fabrica-de-conhecimento.html
+++ b/a-fantastica-fabrica-de-conhecimento.html
@@ -156,7 +156,7 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
-        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    <img width="100%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
     <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
