--- a/o-jogo-dos-metadados.html
+++ b/o-jogo-dos-metadados.html
@@ -164,7 +164,7 @@ Podemos então usar técnicas de estatística, processamento de linguagem natura
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
-        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    <img width="100%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
     <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
