--- a/sugestao-de-tags.html
+++ b/sugestao-de-tags.html
@@ -144,7 +144,7 @@ Linux Código Computador X Livre Rede Web Windows Dados Redes</p>
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
-        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    <img width="100%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
     <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
