--- a/wolfram-alpha-voce-pergunta-a-web-responde.html
+++ b/wolfram-alpha-voce-pergunta-a-web-responde.html
@@ -191,7 +191,7 @@ Vamos ver o que as próximas semanas aguardam e quando o sistema for lançado eu
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
-        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    <img width="100%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
     <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
