Travis build LOCAL pushed to Github Pages

--- a/4-anos-de-debian-festival.html
+++ b/4-anos-de-debian-festival.html
@@ -24,6 +24,7 @@
                 <meta property="article:tag" content="linux" />
                 <meta property="article:tag" content="alagoas" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image" content="images/df2.jpg"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
