--- a/a-fantastica-fabrica-de-conhecimento.html
+++ b/a-fantastica-fabrica-de-conhecimento.html
@@ -23,6 +23,8 @@
                 <meta property="article:tag" content="social tagging" />
                 <meta property="article:tag" content="tagging" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
