--- a/aprendizagem-de-ontologias.html
+++ b/aprendizagem-de-ontologias.html
@@ -26,6 +26,8 @@
                 <meta property="article:tag" content="linked data" />
                 <meta property="article:tag" content="information retrieval" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
