--- a/master-thesis.html
+++ b/master-thesis.html
@@ -26,6 +26,8 @@
                 <meta property="article:tag" content="tag suggestion" />
                 <meta property="article:tag" content="tagging" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
@@ -128,7 +130,9 @@
 <p class="caption">Nuvem de tags</p>
 </div>
 <p>O resultado disso pode ser visto nos slides abaixo:</p>
-<iframe allowfullscreen="" frameborder="0" height="486" marginheight="0" marginwidth="0" scrolling="no" src="//www.slideshare.net/slideshow/embed_code/4865492" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" width="597"> </iframe> <div style="margin-bottom:5px"> <strong> <a href="https://www.slideshare.net/icaromedeiros/tag-suggestion-using-mu" target="_blank" title="Tag Suggestion using Multiple Sources of Knowledge">Tag Suggestion using Multiple Sources of Knowledge</a> </strong> from <strong><a href="http://www.slideshare.net/icaromedeiros" target="_blank">Ícaro Medeiros</a></strong> </div></body></html>
+<center>
+<iframe allowfullscreen="" frameborder="0" height="486" marginheight="0" marginwidth="0" scrolling="no" src="//www.slideshare.net/slideshow/embed_code/4865492" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" width="597"> </iframe> <div style="margin-bottom:5px"> <strong> <a href="https://www.slideshare.net/icaromedeiros/tag-suggestion-using-mu" target="_blank" title="Tag Suggestion using Multiple Sources of Knowledge">Tag Suggestion using Multiple Sources of Knowledge</a> </strong> from <strong><a href="http://www.slideshare.net/icaromedeiros" target="_blank">Ícaro Medeiros</a></strong> </div>
+</center></body></html>
             </div>
             <!-- /.entry-content -->
     <hr />
