--- a/o-jogo-dos-metadados.html
+++ b/o-jogo-dos-metadados.html
@@ -26,6 +26,7 @@
                 <meta property="article:tag" content="wikis" />
                 <meta property="article:tag" content="tagging" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image" content="images/typed-links1.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
