--- a/wolfram-alpha-voce-pergunta-a-web-responde.html
+++ b/wolfram-alpha-voce-pergunta-a-web-responde.html
@@ -26,6 +26,7 @@
                 <meta property="article:tag" content="wolfram" />
                 <meta property="article:tag" content="wolfram alpha" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image" content="images/weather.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
