--- a/e-se-os-filosofos-fossem-programadores.html
+++ b/e-se-os-filosofos-fossem-programadores.html
@@ -23,6 +23,8 @@
                 <meta property="article:tag" content="philosophy" />
                 <meta property="article:tag" content="programming" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
