--- a/im-back.html
+++ b/im-back.html
@@ -21,6 +21,8 @@
                 <meta property="article:section" content="Blog" />
                 <meta property="article:tag" content="blogging" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
