--- a/rss-e-twitter-no-mesmo-ciberespaco.html
+++ b/rss-e-twitter-no-mesmo-ciberespaco.html
@@ -24,6 +24,8 @@
                 <meta property="article:tag" content="twitter" />
                 <meta property="article:tag" content="web 2.0" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
