--- a/web-semantica-e-o-efeito-do-fax.html
+++ b/web-semantica-e-o-efeito-do-fax.html
@@ -24,6 +24,8 @@
                 <meta property="article:tag" content="semantic web" />
                 <meta property="article:tag" content="social networks" />
                 <meta property="article:author" content="Ícaro Medeiros" />
+                <meta property="og:image"
+                      content="http://www.icaromedeiros.com.br/images/avatar.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
