Travis build LOCAL pushed to Github Pages

--- a/microformatos.html
+++ b/microformatos.html
@@ -24,7 +24,7 @@
                 <meta property="article:tag" content="semantic web" />
                 <meta property="article:tag" content="linked data" />
                 <meta property="article:author" content="Ícaro Medeiros" />
-                <meta property="og:image" content="images/microformats-logo.png"/>
+                <meta property="og:image" content="http://www.icaromedeiros.com.br/images/microformats-logo.png"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
