--- a/master-thesis.html
+++ b/master-thesis.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+    <a href="https://plus.google.com/+ÍcaroMedeiros?rel=author">Google</a>
+
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="Ícaro Medeiros" />
             <meta property="og:type" content="article"/>
