Travis build LOCAL pushed to Github Pages

--- a/sugestao-de-tags.html
+++ b/sugestao-de-tags.html
@@ -144,7 +144,7 @@ Linux Código Computador X Livre Rede Web Windows Dados Redes</p>
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div itemprop="comments" id="disqus_thread"></div>
+        <div itemprop="comment" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
