--- a/4-anos-de-debian-festival.html
+++ b/4-anos-de-debian-festival.html
@@ -164,7 +164,7 @@ E mesmo com o "bolo" do pessoal estudante e profissional de computação às vez
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div itemprop="comments" id="disqus_thread"></div>
+        <div itemprop="comment" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
