--- a/a-fantastica-fabrica-de-conhecimento.html
+++ b/a-fantastica-fabrica-de-conhecimento.html
@@ -156,7 +156,7 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div itemprop="comments" id="disqus_thread"></div>
+        <div itemprop="comment" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
