--- a/o-jogo-dos-metadados.html
+++ b/o-jogo-dos-metadados.html
@@ -163,7 +163,7 @@ Podemos então usar técnicas de estatística, processamento de linguagem natura
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div itemprop="comments" id="disqus_thread"></div>
+        <div itemprop="comment" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
