Travis build LOCAL pushed to Github Pages

--- a/im-back-pt.html
+++ b/im-back-pt.html
@@ -4,12 +4,11 @@
       xmlns:fb="https://www.facebook.com/2008/fbml"
       itemscope itemtype="http://schema.org/BlogPosting">
 <head>
-    <title>De volta - Ícaro Medeiros</title>
+    <title itemprop="name">De volta - Ícaro Medeiros</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="Ícaro Medeiros" />
@@ -46,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://www.icaromedeiros.com.br/" class="navbar-brand">
+            <a href="http://www.icaromedeiros.com.br/" class="navbar-brand" itemprop="author">
 Ícaro Medeiros            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -103,7 +102,7 @@
     <p> <span class="label label-default">Tags</span>
     <a href="http://www.icaromedeiros.com.br/tag/blogging.html"><span itemprop="keywords">blogging</span></a>
  </p>
-    <span class="label label-default">Também disponível em</span>
+    <span class="label label-default">Also available in</span>
     <a href="http://www.icaromedeiros.com.br/im-back.html">
         English
     </a>
