Travis build LOCAL pushed to Github Pages

--- a/archives.html
+++ b/archives.html
@@ -76,6 +76,8 @@
         <h1>Archives for Ícaro Medeiros</h1>
 
         <dl>
+                <dt>Sat 13 September 2014</dt>
+                <dd><a href='http://www.icaromedeiros.com.br/linked-data-in-use.html'>Linked data in use</a></dd>
                 <dt>Sun 10 August 2014</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/im-back.html'>I'm back</a></dd>
                 <dt>Wed 23 September 2009</dt>
@@ -173,6 +175,21 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/json.html">
+                                json
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/json-ld.html">
+                                json-ld
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/json-schema.html">
+                                json schema
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/knowledge-reasoning.html">
                                 knowledge reasoning
                             </a>
@@ -182,7 +199,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 knowledge representation
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-1">
                             <a href="http://www.icaromedeiros.com.br/tag/linked-data.html">
                                 linked data
                             </a>
@@ -232,7 +249,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 programming
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/rdf.html">
                                 rdf
                             </a>
@@ -245,6 +262,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/rss.html">
                                 rss
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/schemaorg.html">
+                                schema.org
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
@@ -267,6 +289,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 social tagging
                             </a>
                         </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/sparql.html">
+                                sparql
+                            </a>
+                        </li>
                         <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/tag-suggestion.html">
                                 tag suggestion
@@ -275,6 +302,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-1">
                             <a href="http://www.icaromedeiros.com.br/tag/tagging.html">
                                 tagging
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/talks.html">
+                                talks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
