--- a/authors.html
+++ b/authors.html
@@ -73,7 +73,7 @@
         </ol>
 
     <h1>Authors on Ícaro Medeiros</h1>
-        <li><a href="http://www.icaromedeiros.com.br/author/icaro-medeiros.html">Ícaro Medeiros</a> (12)</li>
+        <li><a href="http://www.icaromedeiros.com.br/author/icaro-medeiros.html">Ícaro Medeiros</a> (13)</li>
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
@@ -145,6 +145,21 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/json.html">
+                                json
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/json-ld.html">
+                                json-ld
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/json-schema.html">
+                                json schema
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/knowledge-reasoning.html">
                                 knowledge reasoning
                             </a>
@@ -154,7 +169,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 knowledge representation
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-1">
                             <a href="http://www.icaromedeiros.com.br/tag/linked-data.html">
                                 linked data
                             </a>
@@ -204,7 +219,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 programming
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/rdf.html">
                                 rdf
                             </a>
@@ -217,6 +232,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/rss.html">
                                 rss
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/schemaorg.html">
+                                schema.org
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
@@ -239,6 +259,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 social tagging
                             </a>
                         </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/sparql.html">
+                                sparql
+                            </a>
+                        </li>
                         <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/tag-suggestion.html">
                                 tag suggestion
@@ -247,6 +272,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-1">
                             <a href="http://www.icaromedeiros.com.br/tag/tagging.html">
                                 tagging
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/talks.html">
+                                talks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
